--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -40,7 +40,7 @@
       text-align: center;
     }
     @include respond(phone) {
-      font-size: 3.5rem;
+      font-size: 2.5rem;
       line-height: 1.5;
     }
     @include respond(phone-xs) {
